name: hutton
version: 0.0.0
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Taylor Fausak <taylor@fausak.me>
synopsis: A program for the button on Reddit.
description:
    Hutton is a program for <https://www.reddit.com/r/thebutton the button> on
    Reddit.
category: Utility
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: https://github.com/tfausak/hutton

executable hutton
    main-is: Main.hs
    build-depends:
        aeson ==0.8.*,
        base ==4.*,
        bytestring ==0.10.*,
        connection ==0.2.*,
        flow ==1.*,
        http-client ==0.4.*,
        http-conduit ==2.*,
        http-types ==0.8.*,
        network ==2.*,
        rainbow ==0.22.*,
        regex-compat ==0.95.*,
        text ==1.*,
        time ==1.*,
        transformers ==0.4.*,
        websockets ==0.9.*,
        wuss ==1.*
    ghc-options: -Wall
